syntax = "proto3";

option go_package = "v1";

message PushMsgReq {
  string username = 1;
  string content = 2;
  string code =3;
}

message PushMsgReply {
    string msg =1;
}
message Request {
    string username=1;
}
message Response {
    string msg=1;
}
service Admin {
  rpc PushMsg(PushMsgReq) returns(PushMsgReply);
  rpc TakeWorking(Request)returns(Response);
}
